@@ -53,6 +53,9 @@ $build_pkg->new(
         'mod_perl2'             => 2.0,
         'Time::HiRes'           => 0,
         },
+    'recommends'        => {
+        'CSS::Minifier::XS'     => 0,
+        },
     # add configuration requirements both to build_requires and to META.yml,
     # until M::B supports "configure_requires" directly.
     'build_requires'    => { %configure_requires },
