@@ -11,6 +11,7 @@ t/charset.t
 t/decline.t
 t/dynamic.t
 t/mime-types.t
+t/minifiers.t
 t/mod-cgi.t
 t/non-css.t
 t/registry.t
@@ -20,6 +21,7 @@ t/conf/extra.conf.in
 t/htdocs/test.css
 t/htdocs/test.txt
 t/htdocs/minified.txt
+t/htdocs/minified-xs.txt
 t/MY/slurp.pm
 t/MY/CharsetHandler.pm
 t/MY/CSSHandler.pm
