@@ -11,7 +11,11 @@ use Apache2::Log qw();              # $log->*()
 use APR::Table qw();                # dir_config->get() and headers_out->unset()
 use Apache2::Const -compile => qw(OK DECLINED);
 use Time::HiRes qw(gettimeofday tv_interval);
-use CSS::Minifier qw(minify);
+
+###############################################################################
+# Load up the CSS minifier modules.
+use CSS::Minifier;
+eval { require CSS::Minifier::XS };
 
 ###############################################################################
 # Version number.
@@ -48,6 +52,35 @@ sub handler {
         return Apache2::Const::DECLINED;
     }
 
+    # figure out which minifier module/function we're supposed to be using;
+    # either an explicit minifier function/package, or our list of acceptable
+    # minifiers
+    my $minifier;
+    my @possible = $r->dir_config->get('CssMinifier') || (
+        'CSS::Minifier::XS',
+        'CSS::Minifier',
+        );
+    foreach my $maybe (@possible) {
+        no strict 'refs';
+        # explicit function name
+        if (defined &{"$maybe"}) {
+            $minifier = sub { $maybe->(shift) };
+            last;
+        }
+        # package name; look for "minify()" function
+        if (defined &{"${maybe}::minify"}) {
+            my $func = \&{"${maybe}::minify"};
+            $minifier = ($maybe eq 'CSS::Minifier')
+                            ? sub { $func->(input=>shift) }
+                            : sub { $func->(shift) };
+            last;
+        }
+    }
+    unless ($minifier) {
+        $log->info( "no CSS minifier available; declining" );
+        return Apache2::Const::DECLINED;
+    }
+
     # gather up entire document
     my $ctx = $f->ctx;
     while ($f->read(my $buffer, 4096)) {
@@ -63,7 +96,7 @@ sub handler {
     # if we've got CSS to minify, minify it
     if ($ctx) {
         my $t_st = [gettimeofday()];
-        my $min  = eval { minify( input=>$ctx ) };
+        my $min  = eval { $minifier->($ctx) };
         if ($@) {
             # minification failed; log error and send original CSS
             $log->error( "error minifying: $@" );
@@ -96,12 +129,17 @@ Apache2::Filter::Minifier::CSS - CSS minifying output filter
 
       # if you need to supplement MIME-Type list
       PerlSetVar                CssMimeType  text/plain
+
+      # if you want to explicitly specify the minifier to use
+      #PerlSetVar               CssMinifier  CSS::Minifier::XS
+      #PerlSetVar               CssMinifier  CSS::Minifier
+      #PerlSetVar               CssMinifier  MY::Minifier::function
   </LocationMatch>
 
 =head1 DESCRIPTION
 
 C<Apache2::Filter::Minifier::CSS> is a Mod_perl2 output filter which minifies
-CSS using C<CSS::Minifier>.
+CSS using C<CSS::Minifier> or C<CSS::Minifier::XS>.
 
 Only CSS style-sheets are minified, all others are passed through
 unaltered.  C<Apache2::Filter::Minifier::CSS> comes with a list of known
@@ -109,6 +147,14 @@ acceptable MIME-Types for CSS style-sheets, but you can supplement that list
 yourself by setting the C<CssMimeType> PerlVar appropriately (use C<PerlSetVar>
 for a single new MIME-Type, or C<PerlAddVar> when you want to add multiple
 MIME-Types).
+
+Given a choice, using C<CSS::Minifier::XS> is preferred over C<CSS::Minifier>,
+but we'll use whichever one you've got available.  If you want to explicitly
+specify which minifier you want to use, set the C<CssMinifier> PerlVar to the
+name of the package/function that implements the minifier.  Minification
+functions are expected to accept a single parameter (the CSS to be minified)
+and to return the minified CSS on completion.  If you specify a package name,
+we look for a C<minify()> function in that package.
 
 =head2 Caching
 
@@ -163,6 +209,7 @@ license as Perl itself.
 =head1 SEE ALSO
 
 L<CSS::Minifier>,
+L<CSS::Minifier::XS>,
 L<Apache2::Filter::Minifier::JavaScript>,
 L<Apache::Clean>.
 
