@@ -1,0 +1,1 @@
+body{border:0;margin:0}
