@@ -2,6 +2,9 @@ Revision history for Perl extension Apache2::Filter::Minifier::CSS.
 
 1.04_01 ???
     - added timing info to the debug logs
+    - use CSS::Minifier::XS if available; its -MUCH- faster
+    - new "CssMinifier" PerlVar, to let you specify which minifier package or
+      function to use (otherwise we try C:M:XS first, falling back to C:M)
 
 1.03    Fri Sep 28 11:09 PDT 2007
     - rewrote Build.PL/Makefile.PL so they now check if you've got Apache::Test
